--- a/app/views/home/_survey_index.html.erb
+++ b/app/views/home/_survey_index.html.erb
@@ -82,7 +82,7 @@
     </div>
     
     <div class="span6" id="scale">
-      <h3><%=t ('todays_leaderboard') %></h3>
+      <h3><%=t ('todays_leaderboard') %> <small><%= link_to t('view_leaderboards'), @division %> </small></h3>
       <table class="table table-striped">
         <thead>
           <tr>
