--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -3,26 +3,74 @@
   <h1><%= @division.name %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:organization_id) %>:</strong></dt>
-  <dd><%= link_to @division.organization, @division.organization %></dd>
-  
-  <dt><strong><%=t 'groups' %>:</strong></dt>
-  <dd><%= raw(@division.groups.map{|group| link_to(group, [@division,group])}.join(', ')) %></dd>
-</dl>
-
-
-<div class="form-actions">
-  <%= link_to t('create_new_group'),
-              new_division_group_path(@division), :class => 'btn btn-primary'  %>
-              
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              divisions_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_division_path(@division), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              division_path(@division),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+<div class="row-fluid">
+  <div class="span6">
+    <h3><%=t ('todays_leaderboard') %></h3>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th><%=t 'rank' %></th>
+          <th><%=t 'name' %></th>
+          <th><%=t 'score' %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @division.users.unscoped.leaderboard(Date.today,Date.today).each_with_index do |user,i| %>
+          <tr>
+            <td><%= i+1 %></td>
+            <td><%= user %></td>
+            <td><%= user.completed_surveys.where{ date == my{Date.today} }.try(:first).try(:score) %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="span6">
+    <h3><%=t ('alltime_leaderboard') %></h3>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th><%=t 'rank' %></th>
+          <th><%=t 'name' %></th>
+          <th><%=t 'score' %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @division.users.unscoped.order{ score.desc }.each_with_index do |user,i| %>
+          <tr>
+            <td><%= i+1 %></td>
+            <td><%= user %></td>
+            <td><%= user.score %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
+
+<% if current_user.has_role?('admin', resource) %>
+
+  <dl class="dl-horizontal">
+    <dt><strong><%= model_class.human_attribute_name(:organization_id) %>:</strong></dt>
+    <dd><%= link_to @division.organization, @division.organization %></dd>
+  
+    <dt><strong><%=t 'groups' %>:</strong></dt>
+    <dd><%= raw(@division.groups.map{|group| link_to(group, [@division,group])}.join(', ')) %></dd>
+  </dl>
+
+
+  <div class="form-actions">
+    <%= link_to t('create_new_group'),
+                new_division_group_path(@division), :class => 'btn btn-primary'  %>
+              
+    <%= link_to t('.back', :default => t("helpers.links.back")),
+                divisions_path, :class => 'btn'  %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_division_path(@division), :class => 'btn' %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                division_path(@division),
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-danger' %>
+  </div>
+<% end %>
