--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -8,50 +8,54 @@
   <dd><%= @organization.name %></dd>
 </dl>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              organizations_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_organization_path(@organization), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              organization_path(@organization),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div>
 
-<h2><%=t 'twitter_accounts' %></h2>
+<% if current_user.has_role?('admin', @organization) %>
 
-<table class="table">
-  <tbody>
-    <% @organization.twitter_accounts.each do |account| %>
-      <tr>
-        <td><a href="http://twitter.com/<%= account.nickname %>"><img src="<%= @organization.twitter_profile_image_src(account.nickname) %>" /></a></td>
-        <td>@<a href="http://twitter.com/<%= account.nickname %>"><%= account.nickname %></a></td>
-        <td><%= @organization.twitter_description(account.nickname) %></td>
-        <td><%= link_to t('delete'), authentication_path(account), method: 'delete', confirm: t("helpers.links.confirm", default: 'Are you sure?'), class: 'btn btn-danger' %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="form-actions">
+    <%= link_to t('.back', :default => t("helpers.links.back")),
+                organizations_path, :class => 'btn'  %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_organization_path(@organization), :class => 'btn' %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                organization_path(@organization),
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-danger' %>
+  </div>
 
-<div class="form-actions">
-  <a class="btn btn-info" href="/auth/twitter?force_login=true&amp;organization_id=<%= @organization.to_param %>"><%= t('add_twitter_account') %></a>
-</div>
+  <h2><%=t 'twitter_accounts' %></h2>
 
-<h2><%=t 'google_accounts' %></h2>
+  <table class="table">
+    <tbody>
+      <% @organization.twitter_accounts.each do |account| %>
+        <tr>
+          <td><a href="http://twitter.com/<%= account.nickname %>"><img src="<%= @organization.twitter_profile_image_src(account.nickname) %>" /></a></td>
+          <td>@<a href="http://twitter.com/<%= account.nickname %>"><%= account.nickname %></a></td>
+          <td><%= @organization.twitter_description(account.nickname) %></td>
+          <td><%= link_to t('delete'), authentication_path(account), method: 'delete', confirm: t("helpers.links.confirm", default: 'Are you sure?'), class: 'btn btn-danger' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<table class="table">
-  <tbody>
-    <% @organization.google_accounts.each do |account| %>
-      <tr>
-        <td><%= account.nickname %></td>
-        <td><%= link_to t('delete'), authentication_path(account), method: 'delete', confirm: t("helpers.links.confirm", default: 'Are you sure?'), class: 'btn btn-danger' %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="form-actions">
+    <a class="btn btn-info" href="/auth/twitter?force_login=true&amp;organization_id=<%= @organization.to_param %>"><%= t('add_twitter_account') %></a>
+  </div>
 
-<div class="form-actions">
-  <a class="btn btn-info" href="/auth/google_oauth2?force_login=true&amp;organization_id=<%= @organization.to_param %>"><%= t('add_google_account') %></a>
-</div>
+  <h2><%=t 'google_accounts' %></h2>
+
+  <table class="table">
+    <tbody>
+      <% @organization.google_accounts.each do |account| %>
+        <tr>
+          <td><%= account.nickname %></td>
+          <td><%= link_to t('delete'), authentication_path(account), method: 'delete', confirm: t("helpers.links.confirm", default: 'Are you sure?'), class: 'btn btn-danger' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div class="form-actions">
+    <a class="btn btn-info" href="/auth/google_oauth2?force_login=true&amp;organization_id=<%= @organization.to_param %>"><%= t('add_google_account') %></a>
+  </div>
+<% end %>
