--- a/app/views/home/_survey_index.html.erb
+++ b/app/views/home/_survey_index.html.erb
@@ -1,6 +1,9 @@
 <% if current_user.has_role? 'admin', @survey %>
   <section id="current-roster">
-    <h1><%=t 'current_roster' %></h1>
+    <h1>
+      <%=t 'current_roster' %>
+      <%= link_to t('leaderboards'), @division, class: 'btn btn-large pull-right' %>
+    </h1>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -82,7 +85,7 @@
     </div>
     
     <div class="span6" id="scale">
-      <h3><%=t ('todays_leaderboard') %> <small><%= link_to t('view_leaderboards'), @division %> </small></h3>
+      <h3><%=t ('todays_leaderboard') %> <small><%= link_to t('view_leaderboards'), @division %></small></h3>
       <table class="table table-striped">
         <thead>
           <tr>
