--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <!-- For iPhone 4 with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="" />
-    <!-- For first-generation iPad: -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="" />
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <link rel="apple-touch-icon-precomposed" href="" />
-    <!-- For nokia devices: -->
-    <link rel="shortcut icon" href="" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="<%= path_to_image('icons/ipad-retina.png') %>" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="<%= path_to_image('icons/iphone-retina.png') %>" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="<%= path_to_image('icons/ipad.png') %>" />
+    <link rel="apple-touch-icon-precomposed" href="<%= path_to_image('icons/iphone.png') %>" />
+    <link rel="shortcut icon" href="<%= path_to_image('icons/iphone.png') %>" />
     
     <title><%= content_for?(:title) ? yield(:title) : "Recoverytracker" %></title>
     
