--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,10 +3,10 @@
   <span class="icon-bar"></span>
   <span class="icon-bar"></span>
 </a>
-<% if @organization.nil? %>
+<% unless icon_image_tag %>
   <%= link_to "Recovery Tracker", root_path, :class => 'brand' %>
 <% else %>
-  <%= link_to "#{image_tag(@organization.logo.url)} Recovery Tracker".html_safe, root_path, :class => 'brand' %>
+  <%= link_to "#{icon_image_tag} Recovery Tracker".html_safe, root_path, :class => 'brand' %>
 <% end %>
 <div class="nav-collapse">
   <ul class="nav">
