--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -45,7 +45,7 @@
   <%= link_to t('.back', :default => t("helpers.links.back")),
               groups_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_group_path(@group), :class => 'btn' %>
+              [:edit,parent,@group], :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               group_path(@group),
               :method => 'delete',
