--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,24 +27,28 @@
 </section>
 
 <section class="row-fluid">
-  <div class="span6">
+  <div class="span12">
     <h2><%=t 'last_5_days' %></h2>
     <div class="graph" data-user_id="<%= @user.id %>" data-day_range="5"></div>
   </div>
-  
-  <div class="span6">
+</section>
+
+<section class="row-fluid">  
+  <div class="span12">
     <h2><%=t 'last_10_days' %></h2>
     <div class="graph" data-user_id="<%= @user.id %>" data-day_range="10"></div>
   </div>
 </section>
 
 <section class="row-fluid">
-  <div class="span6">
+  <div class="span12">
     <h2><%=t 'last_15_days' %></h2>
     <div class="graph" data-user_id="<%= @user.id %>" data-day_range="15"></div>
   </div>
-  
-  <div class="span6">
+</section>
+
+<section class="row-fluid">  
+  <div class="span12">
     <h2><%=t 'last_30_days' %></h2>
     <div class="graph" data-user_id="<%= @user.id %>" data-day_range="30"></div>
   </div>
