Adds Averages and Timezones

--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -15,11 +15,11 @@
         </tr>
       </thead>
       <tbody>
-        <% @division.users.unscoped.leaderboard(Date.today,Date.today).each_with_index do |user,i| %>
+        <% @division.users.unscoped.leaderboard(@division.today,@division.today).each_with_index do |user,i| %>
           <tr>
             <td><%= i+1 %></td>
             <td><%= user %></td>
-            <td><%= user.completed_surveys.where{ date == my{Date.today} }.try(:first).try(:score) %></td>
+            <td><%= user.completed_surveys.where{ date == my{@division.today} }.try(:first).try(:score) %></td>
           </tr>
         <% end %>
       </tbody>
@@ -32,14 +32,16 @@
         <tr>
           <th><%=t 'rank' %></th>
           <th><%=t 'name' %></th>
-          <th><%=t 'score' %></th>
+          <th><%=t 'average' %></th>
+          <th><%=t 'total' %></th>
         </tr>
       </thead>
       <tbody>
-        <% @division.users.unscoped.where{ score != nil }.order{ score.desc }.each_with_index do |user,i| %>
+        <% @division.users.unscoped.where{ average != nil }.order{ [average.desc,score.desc] }.each_with_index do |user,i| %>
           <tr>
             <td><%= i+1 %></td>
             <td><%= user %></td>
+            <td><%= user.average %></td>
             <td><%= user.score %></td>
           </tr>
         <% end %>
@@ -48,7 +50,7 @@
   </div>
 </div>
 
-<% if current_user.has_role?('admin', resource) %>
+<% if true || current_user.has_role?('admin', resource) %>
 
   <dl class="dl-horizontal">
     <dt><strong><%= model_class.human_attribute_name(:organization_id) %>:</strong></dt>
