--- a/app/views/divisions/_form.html.erb
+++ b/app/views/divisions/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @division, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :name %>
-  <%= f.association :organization, collection: Organization.with_role('admin', current_user), prompt: "Choose an Organization" %>
+  <%#= f.association :organization, collection: Organization.with_role('admin', current_user), prompt: "Choose an Organization" %>
+  <%= f.input :time_zone, priority: /US/ %>
   
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
