--- a/app/views/groups/show.csv.erb
+++ b/app/views/groups/show.csv.erb
@@ -5,6 +5,6 @@ csv_lib = RUBY_VERSION =~ /^1.8/ ? FasterCSV : CSV
 csv_output = csv_lib.generate(headers: true) do |csv|
   csv << ["", @dates.map(&:to_s) ].flatten
   @group.users.each do |user|
-    csv << [user.name, @dates.map{|date| user.completed_surveys.find_by_date(date).try(:score) || 'NA' }].flatten
+    csv << [user.name, @dates.reverse.map{|date| user.completed_surveys.find_by_date(date).try(:score) || 'NA' }].flatten
   end
 end -%><%= csv_output.html_safe %>
