reverses csv direction

--- a/app/views/groups/show.csv.erb
+++ b/app/views/groups/show.csv.erb
@@ -3,7 +3,7 @@ require 'csv'
 csv_lib = RUBY_VERSION =~ /^1.8/ ? FasterCSV : CSV
  
 csv_output = csv_lib.generate(headers: true) do |csv|
-  csv << ["", @dates.map(&:to_s) ].flatten
+  csv << ["", @dates.reverse.map(&:to_s) ].flatten
   @group.users.each do |user|
     csv << [user.name, @dates.reverse.map{|date| user.completed_surveys.find_by_date(date).try(:score) || 'NA' }].flatten
   end
