--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.input :email %>
   <%= f.input :password %>
   <%= f.input :password_confirmation %>
+  <%= f.input :active %>
   
   
   <div class="form-actions">
