--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon-precomposed" href="<%= path_to_image('icons/iphone.png') %>" />
     <link rel="shortcut icon" href="<%= path_to_image('icons/iphone.png') %>" />
     
-    <title><%= content_for?(:title) ? yield(:title) : "Recoverytracker" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Recovery Tracker" %></title>
     
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
