--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,27 +1,54 @@
 <%- model_class = Organization -%>
-<div class="page-header clearfix">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
-</div>
-
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @organization.name %></dd>
-</dl>
-
-
-<% if current_user.has_role?('admin', @organization) %>
-
-  <div class="form-actions">
-    <%= link_to t('.back', :default => t("helpers.links.back")),
-                organizations_path, :class => 'btn'  %>
+<div class="page-header clearfix row-fluid">
+  <h1 class="span8"><%= @organization %></h1>
+  <% if current_user.has_role?('admin', @organization) %>
     <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                edit_organization_path(@organization), :class => 'btn' %>
+                edit_organization_path(@organization), :class => 'btn span2 btn-large' %>
     <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                 organization_path(@organization),
                 :method => 'delete',
                 :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                :class => 'btn btn-danger' %>
-  </div>
+                :class => 'btn btn-danger btn-large span2' %>
+  <% end %>
+</div>
+
+<h2><%=t 'metrics' %></h2>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:metric_type_id) %></th>
+      <th><%= model_class.human_attribute_name(:decimal_places) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @organization.metrics.each do |metric| %>
+      <tr>
+        <td><%= link_to metric, organization_metric_path(@organization,metric) %></td>
+        <td><%= metric.metric_type %></td>
+        <td><%= metric.decimal_places %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_organization_metric_path(@organization,metric), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      organization_metric_path(@organization,metric),
+                      :method => :delete,
+                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<div class="form-actions">
+  <%= link_to t('add_metric'), new_organization_metric_path(resource), :class => 'btn btn-info' %>
+</div>
+
+
+<% if current_user.has_role?('admin', @organization) %>
 
   <h2><%=t 'twitter_accounts' %></h2>
 
