--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,6 +41,7 @@
     display: none;
     margin-bottom: 20px;
     &.start,
+    &#divisions,
     &#current-roster {
       display: block;
     }
