--- a/app/views/assigned_question_sets/show.html.erb
+++ b/app/views/assigned_question_sets/show.html.erb
@@ -51,9 +51,9 @@
   <%= link_to t('.back', :default => t("helpers.links.back")),
               parent, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              [:edit,@assigned_question_set.survey,@assigned_question_set], :class => 'btn' %>
+              [:edit,@assigned_question_set.survey,resource], :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              [@assigned_question_set.survey,@assigned_question_set],
+              [@assigned_question_set.survey,resource],
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
               :class => 'btn btn-danger' %>
