--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,6 +21,20 @@
         <%= link_to t('log_in'), new_user_session_path %>  
       </li>
     <% end %>
+    <li class="dropdown">
+      <a href="#"class="dropdown-toggle" data-toggle="dropdown"><%=t 'language' %><b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <% Locale.all.each do |locale| %>
+          <li>
+            <% if I18n.locale.to_s != locale.code %>
+              <%= link_to t("#{locale.name.downcase}_alt".to_sym), "?locale=#{locale.code}" %>
+            <% else %>
+              <%= link_to t("#{locale.name.downcase}".to_sym), "?locale=#{locale.code}" %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    </li>
     <% if user_signed_in? %>
       <li>
         <%= link_to t('edit_account'), edit_user_registration_path %>
