--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,5 +1,12 @@
 <%= simple_form_for @survey, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :name %>
+  
+  <% resource.organization.locales.each do |l| %>
+    <h4><%=t l.name %></h4>
+    <%= f.globalize_fields_for l.code.to_sym do |g| %>
+      <%= g.input :name %>
+    <% end %>
+  <% end %>
+  
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
