Fix for weird Google Drive Bug

--- a/app/views/home/_survey_index.html.erb
+++ b/app/views/home/_survey_index.html.erb
@@ -61,7 +61,7 @@
     <% end %>
     
     <% if assigned_question_set == @survey.assigned_question_sets.last %>
-      <a href="#summary" data-user_id="<%= current_user.try(:id) %>" data-sumbission-uri="<%= survey_completed_surveys_path(@survey) %>" class="navigate btn btn-primary pull-right next disabled">Submit Answers</a>
+      <a href="#summary" data-user_id="<%= current_user.try(:id) %>" data-sumbission-uri="<%= survey_completed_surveys_path(@survey) %>" class="navigate btn btn-primary pull-right next disabled"><%=t 'submit_answers' %></a>
     <% else %>
       <a href="#<%= @survey.assigned_question_sets[i+1].to_s.parameterize %>" class="navigate btn btn-inverse pull-right next disabled"><%=t 'next' %></a>
     <% end %>
