--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -50,7 +50,7 @@
   </div>
 </div>
 
-<% if true || current_user.has_role?('admin', resource) %>
+<% if can?(:update, @division) %>
 
   <dl class="dl-horizontal">
     <dt><strong><%= model_class.human_attribute_name(:organization_id) %>:</strong></dt>
