--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,11 +11,21 @@
 <div class="nav-collapse">
   <ul class="nav">
     <% if user_signed_in? %>
-      <li><p class="navbar-text"><%=t 'signed_in_as' %>: <%= current_user.name %></p></li>
+      <li class="dropdown">
+        <a href="#"class="dropdown-toggle" data-toggle="dropdown"><%=t 'signed_in_as' %>: <%= current_user.name %><b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li>
+            <%= link_to t('history'), current_user %>
+          </li>
+          <li>
+            <%= link_to t('edit_account'), edit_user_registration_path %>
+          </li>
+          <li>
+            <%= link_to t('log_out'), destroy_user_session_path, :method=>'delete' %>        
+          </li>
+          
+        </ul>
       <li class="divider-vertical"></li>
-      <li>
-        <%= link_to t('log_out'), destroy_user_session_path, :method=>'delete' %>        
-      </li>
     <% else %>
       <li>
         <%= link_to t('log_in'), new_user_session_path %>  
@@ -36,9 +46,6 @@
       </ul>
     </li>
     <% if user_signed_in? %>
-      <li>
-        <%= link_to t('edit_account'), edit_user_registration_path %>
-      </li>
       <% if signed_in? && Organization.with_role('admin', current_user).count > 0 %>
         <li class="dropdown pull-right">
           <a href="#"class="dropdown-toggle" data-toggle="dropdown"><%=t 'admin' %><b class="caret"></b></a>
