--- a/app/views/assigned_divisions/index.html.erb
+++ b/app/views/assigned_divisions/index.html.erb
@@ -3,33 +3,48 @@
   <h1><%=t 'divisions' %></h1>
 </div>
 
-<% @assigned_divisions.each do |assigned_division| %>
-  <h2><%= link_to assigned_division, assigned_division.division %></h2>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <% assigned_division.division.groups.each do |group| %>
-          <th><%= link_to group.name, [group.division, group] %></th>
-        <% end %>
-      </tr>
-    </thead>
-    <tbody>
-      <% assigned_division.division.grouped_users.each_with_index do |grouped_user_row,i| %>
-        <tr>
-          <% grouped_user_row.each do |grouped_user| %>
-            <td>
-              <% if grouped_user[i] %>
-                <%= link_to grouped_user[i], grouped_user[i] %>
-              <% else %>
-                &nbsp;
+<div class="tabbable">
+  <ul class="nav nav-tabs">
+    <% @assigned_divisions.each_with_index do |assigned_division,i| %>
+      <li class="<%= i == 0 ? 'active' : '' %>">
+        <a data-toggle="tab" href="#<%= assigned_division.to_s.parameterize %>"><%= assigned_division %></a>
+      </li>
+    <% end %>
+  </ul>
+
+  <div class="tab-content">
+    <% @assigned_divisions.each_with_index do |assigned_division,i| %>
+      <div class="tab-pane <%= i == 0 ? 'active' : '' %>" id="<%= assigned_division.to_s.parameterize %>">
+        <%= link_to t('leaderboards'), assigned_division.division, class: 'btn btn-large btn-info pull-right' %>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <% assigned_division.division.groups.each do |group| %>
+                <th><%= link_to group.name, [group.division, group] %></th>
               <% end %>
-            </td>
-          <% end %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% end %>
+            </tr>
+          </thead>
+          <tbody>
+            <% assigned_division.division.grouped_users.each_with_index do |grouped_user_row,i| %>
+              <tr>
+                <% grouped_user_row.each do |grouped_user| %>
+                  <td>
+                    <% if grouped_user[i] %>
+                      <%= link_to grouped_user[i], grouped_user[i] %>
+                    <% else %>
+                      &nbsp;
+                    <% end %>
+                  </td>
+                <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+  </div>
+</div>
+
 
 <%= link_to t('create_new_division'),
             new_division_path,
