--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,7 +38,7 @@
   }
   section {
     clear: both;
-    display: none;
+//    display: none;
     margin-bottom: 20px;
     &.start,
     &#divisions,
