--- a/app/views/home/_survey_index.html.erb
+++ b/app/views/home/_survey_index.html.erb
@@ -42,7 +42,7 @@
             <% 0.upto(assigned_question_set.question_set.max_responses).each do |i| %>
               <td>
                 <% if assigned_question.question.responses[i] %>
-                  <a data-response_id="<%= assigned_question.question.responses[i].id %>" data-question_id="<%= assigned_question.question.id %>" href="#" class="answer btn <%= response_css_point_class(assigned_question.question.responses[i],i+1) %>" data-value="<%= assigned_question.question.responses[i].points %>"><%= assigned_question.question.responses[i].short_text.try(:html_safe) %></a>
+                  <a data-suggestion="<%=j assigned_question.question.responses[i].suggestion %>" data-response_id="<%= assigned_question.question.responses[i].id %>" data-question_id="<%= assigned_question.question.id %>" href="#" class="answer btn <%= response_css_point_class(assigned_question.question.responses[i],i+1) %>" data-value="<%= assigned_question.question.responses[i].points %>"><%= assigned_question.question.responses[i].short_text.try(:html_safe) %></a>
                 <% else %>
                   &nbsp;
                 <% end %>
@@ -111,6 +111,13 @@
     <div class="span12">
       <h2><%=t 'last_30_days' %></h2>
       <div class="graph" data-user_id="<%= current_user.try(:id) %>" data-day_range="30"></div>
+    </div>
+  </div>
+  
+  <div class="row-fluid">
+    <div class="span12">
+      <h3><%=t ('suggestions') %></h3>
+      <dl class="dl-horizontal" id="suggestions"></dl>
     </div>
   </div>
   
