--- a/app/views/assigned_surveys/_form.html.erb
+++ b/app/views/assigned_surveys/_form.html.erb
@@ -1,9 +1,8 @@
-<%= simple_form_for @assigned_survey, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :survey_id %>
-  <%= f.input :division_id %>
+<%= simple_form_for [parent,resource], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.association :survey, collection: parent.organization.surveys %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                assigned_surveys_path, :class => 'btn' %>
+                root_path, :class => 'btn' %>
   </div>
 <% end %>
