--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "#{@division.nil? ? 'divisions' : 'survey'}_index" %>
+<%= render partial: "#{@division.nil? ? 'divisions' : @survey.nil? ? 'no_survey' : 'survey'}_index" %>
