--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,10 @@
 @import "compass/typography/text/nowrap";
 @import "compass/typography/text/ellipsis";
 
+#score {
+  font-size: 30px;
+}
+
 
 .home {
   #final-score {
