--- a/app/views/home/_survey_index.html.erb
+++ b/app/views/home/_survey_index.html.erb
@@ -71,9 +71,9 @@
 <section id="summary">
   <div class="row-fluid">
     <div class="span6" id="final-score">
-      <h1><%=t 'your_score' %>: <span id="score">0</span> <small><%= link_to t('history'), "/users/user_id", class: "completed-survey-link" %></small></h1>
+      <h1><%=t 'your_score' %>: <span id="score">0</span> <small><%= link_to t('history'), "/users/user_id", class: "btn pull-right completed-survey-link" %></small></h1>
       
-      <h3>Scale</h3>
+      <h3><%=t 'scale' %></h3>
       <table class="table table-bordered point-legend">
         <% @survey.point_ranges.each_with_index do |point_range,i| %>
           <tr data-range="<%= point_range.low %>-<%= point_range.high || 1000 %>">
@@ -82,28 +82,33 @@
           </tr>
         <% end %>
       </table>
+      
+      <h3><%=t ('tips_for_improvement') %></h3>
+      <dl class="dl-horizontal" id="suggestions"></dl>
     </div>
     
-    <div class="span6" id="scale">
-      <h3><%=t ('todays_leaderboard') %> <small><%= link_to t('view_leaderboards'), @division %></small></h3>
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th><% 'rank' %></th>
-            <th><%=t 'name' %></th>
-            <th><%=t 'score' %></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @division.users.unscoped.active.leaderboard(@division.today,@division.today).each_with_index do |user,i| %>
+    <div class="span6" id="leaderboard" data-division_id="<%= @division.id %>">
+      <h3><%=t ('todays_leaderboard') %> <small><%= link_to t('view_leaderboards'), @division, class: 'btn pull-right' %></small></h3>
+      <div class="attach-point">
+        <table class="table table-striped">
+          <thead>
             <tr>
-              <td><%= i+1 %></td>
-              <td><%= user %></td>
-              <td><%= user.completed_surveys.where{ date == my{@division.today} }.try(:first).try(:score) %></td>
+              <th><% 'rank' %></th>
+              <th><%=t 'name' %></th>
+              <th><%=t 'score' %></th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            <% @division.users.unscoped.active.leaderboard(@division.today,@division.today).each_with_index do |user,i| %>
+              <tr id="user-<%= user.id %>">
+                <td><%= i+1 %></td>
+                <td><%= user %></td>
+                <td><%= user.completed_surveys.where{ date == my{@division.today} }.try(:first).try(:score) %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
   
@@ -111,13 +116,6 @@
     <div class="span12">
       <h2><%=t 'last_30_days' %></h2>
       <div class="graph" data-user_id="<%= current_user.try(:id) %>" data-day_range="30"></div>
-    </div>
-  </div>
-  
-  <div class="row-fluid">
-    <div class="span12">
-      <h3><%=t ('suggestions') %></h3>
-      <dl class="dl-horizontal" id="suggestions"></dl>
     </div>
   </div>
   
