--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @survey, :html => { :class => 'form-horizontal' } do |f| %>
   
-  <% resource.organization.locales.each do |l| %>
+  <% (resource.organization || Organization.with_role('admin', current_user).first).locales.each do |l| %>
     <h4><%=t l.name %></h4>
     <%= f.globalize_fields_for l.code.to_sym do |g| %>
       <%= g.input :name %>
