--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -71,6 +71,9 @@
             <li class="<%= (controller_name == 'surveys' ? 'active' : '') %>">
               <%= link_to t('surveys'), surveys_path %>
             </li>
+            <li class="<%= (controller_name == 'users' ? 'active' : '') %>">
+              <%= link_to t('users'), users_path %>
+            </li>
           </ul>
         </li>
       <% end %>
